# TravelUI

./: App.tsx  package-lock.json  package.json
android/: build.gradle  gradle.properties
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ios/travelapp/: Info.plist
ios/travelapp.xcodeproj/: project.pbxproj
src/navigation/: TabNavigator.tsx
src/screens/: HomeScreen.tsx
